# sunkit-dem

./: .coveragerc  .cruft.json  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .rtd-environment.yml  .ruff.toml  .sunpy-template.yml  .travis.yml  LICENSE.rst  MANIFEST.in  README.md  README.rst  appveyor.yml  azure-pipelines.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  dem.rst  develop.rst  getting_started.rst  index.rst
docs/reference/: index.rst
docs/sunkit-dem/: index.rst
licenses/: LICENSE.rst
sunkit-dem/: __init__.py
sunkit-dem/example_subpkg/: setup_package.py
sunkit_dem/: __init__.py  base_model.py  model_factory.py  util.py
sunkit_dem/models/: __init__.py  hk12.py
sunkit_dem/reference/: index.rst
sunkit_dem/tests/: coveragerc  test_util.py
