[metadata]
name = sunkit_dem
author = SunPy Developers
author_email = will.t.barnes@gmail.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://github.com/sunpy/sunkit-dem
description = A package for computing solar differential emission measure distributions
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires = 
    sunpy
    ndcube



[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    towncrier

    sunpy-sphinx-theme


[options.package_data]
sunkit_dem = data/*

[tool:pytest]
testpaths = "sunkit_dem" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
remote_data_strict = True

[coverage:run]
omit =
  sunkit_dem/_sunpy_init*
  sunkit_dem/conftest.py
  sunkit_dem/*setup_package*
  sunkit_dem/tests/*
  sunkit_dem/*/tests/*
  sunkit_dem/extern/*
  sunkit_dem/version*
  */sunkit_dem/_sunpy_init*
  */sunkit_dem/conftest.py
  */sunkit_dem/*setup_package*
  */sunkit_dem/tests/*
  */sunkit_dem/*/tests/*
  */sunkit_dem/extern/*
  */sunkit_dem/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
